<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Verify">




    <LinearLayout
        android:id="@+id/verifyEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/SecondLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/verifyEmail"
            android:textSize="40sp"
            android:layout_marginTop="100sp"
            android:textStyle="bold"
            />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/SecondLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/union"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/verifyEmailLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:textSize="20sp"
            android:layout_width="280dp"
            android:layout_gravity="center"
            android:text="@string/enter_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_marginBottom="200sp"
            android:text="@string/otp_message"
            />

        <Button
            android:id="@+id/sendOtpButton"
            android:layout_width="280dp"
            android:textSize="20sp"
            app:backgroundTint="@color/brand_color"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Send_otp"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>