<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginMain">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_vertical"
        >

        <LinearLayout
            android:id="@+id/loginMainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"


            >

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100sp"
                android:text="@string/Login"
                android:textStyle="bold"
                android:textSize="40sp"
                />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_details"
                android:layout_marginTop="30sp"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginBottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

<!--            app:layout_constraintTop_toBottomOf="@+id/loginMainLayout"-->
<!--            app:layout_constraintBottom_toTopOf="@+id/loginFinalLayout"-->
<!--            app:layout_constraintRight_toRightOf="parent"-->
<!--            app:layout_constraintLeft_toLeftOf="parent"-->
<!--            -->
<!--            >-->




        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginFinalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:background="@drawable/union"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBottomLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <EditText
                android:id="@+id/email"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />

            <!--        <EditText-->
            <!--            android:id="@+id/username"-->
            <!--            android:layout_width="280dp"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:hint="Enter Username"-->
            <!--            android:textSize="20sp"-->
            <!--            android:inputType="textPassword" />-->

            <EditText
                android:id="@+id/password"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:textSize="20sp"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/myLoginButton"
                android:layout_width="277dp"
                android:layout_marginTop="70sp"
                android:textSize="20sp"
                app:backgroundTint="@color/brand_color"
                android:layout_height="wrap_content"
                android:text="@string/Login" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_Password"
                android:textSize="10sp"/>

            <ProgressBar
                android:id="@+id/loginMainProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="invisible"
                android:indeterminate="true"
                android:layout_gravity="center"
                android:progressTint="@color/white"/>
        </LinearLayout>

    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>