<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyOtp">

    <LinearLayout
        android:id="@+id/verifyOtpMainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomLayoutButton">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_otp"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_marginTop="100sp"/>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/union"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyOtpMainLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_height="wrap_content"
            android:hint="@string/enter_otp"
            android:textSize="20sp"
            android:layout_width="280dp"
            android:layout_gravity="center"
            android:inputType="numberPassword"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/resend_otp"
            android:layout_marginBottom="200sp"
            android:textSize="15sp"
            />

        <Button
            android:id="@+id/verifyOtpButton"
            android:layout_height="wrap_content"
            android:text="@string/verify_otp"
            android:textSize="20sp"
            android:layout_gravity="center"
            app:backgroundTint="@drawable/property_1_"
            android:background="@drawable/property_1_"
            android:layout_width="290dp"
            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>