<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">




    <LinearLayout
        android:id="@+id/LogoAndBrandNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ButtonNameLayout"
        >

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:text="@string/welcome"
            android:textColor="@color/text_color"
            android:textSize="40sp"
            android:textStyle="bold"
            />




    </LinearLayout>

    <LinearLayout
        android:id="@+id/ButtonNameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/union"
        app:layout_constraintTop_toBottomOf="@+id/LogoAndBrandNameLayout"
        app:layout_constraintLeft_toLeftOf="parent" 
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <TextView
            android:id="@+id/companyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="top|center_horizontal"
            android:textColor="@color/brand_color"
            />

<!--        <ImageView-->
<!--            android:id="@+id/imageView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            tools:srcCompat="@drawable/img"-->
<!--            android:layout_marginTop="20sp"-->
<!--            android:layout_marginBottom="120sp"-->
<!--            android:layout_gravity="center"-->
<!--            android:scaleType="centerCrop"-->
<!--            />-->

        <ImageView
            android:id="@+id/companyImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/img"
            tools:layout_editor_absoluteX="187dp"
            tools:layout_editor_absoluteY="306dp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="120sp"
            android:layout_gravity="center"
            />


        <Button
            android:id="@+id/loginMainButton"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textColor="@color/brand_color"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center"
            app:backgroundTint="@color/brand_color"
            android:textStyle="bold"
            android:text="@string/Sign_up"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
           />

        <!-- Progress Bar -->
        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:progressTint="@color/white"/>
<!--            android:theme="@style/Widget.AppCompat.ProgressBar.Horizontal" />-->

    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>