<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInMain">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_vertical"
        >

        <LinearLayout
            android:id="@+id/loginMainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100sp"
                android:text="@string/Sign_up"
                android:textStyle="bold"
                android:textSize="40sp"
                />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:text="@string/sign_up_details"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginBottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <!--            app:layout_constraintTop_toBottomOf="@+id/loginMainLayout"-->
            <!--            app:layout_constraintBottom_toTopOf="@+id/loginFinalLayout"-->
            <!--            app:layout_constraintRight_toRightOf="parent"-->
            <!--            app:layout_constraintLeft_toLeftOf="parent"-->
            <!--            -->
            <!--            >-->




        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginFinalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:background="@drawable/union"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBottomLayout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <EditText
                android:id="@+id/emailSignUp"
                android:layout_height="wrap_content"
                android:layout_width="280dp"
                android:textSize="20sp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/usernameSignUp"
                android:layout_height="wrap_content"
                android:layout_width="280dp"
                android:textSize="20sp"
                android:hint="Enter Username"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passwordSignUp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:layout_width="280dp"
                android:textSize="20sp"
                android:inputType="textPassword" />

            <!--        <EditText-->
            <!--            android:id="@+id/editTextTextPassword2"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_width="280dp"-->
            <!--            android:textSize="20sp"-->
            <!--            android:layout_marginBottom="70sp"-->
            <!--            android:hint="@string/confirm_password"-->
            <!--            android:inputType="textPassword" />-->


            <Button
                android:id="@+id/signUpPageButton"
                android:textSize="20sp"
                android:layout_marginTop="70sp"
                android:layout_width="280dp"
                app:backgroundTint="@color/brand_color"
                android:layout_height="wrap_content"
                android:text="Sign up" />

<!--            <TextView-->
<!--                android:id="@+id/textView7"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/forgot_Password"-->
<!--                android:textSize="15sp"/>-->

<!--            <ProgressBar-->
<!--                android:id="@+id/loginMainProgressBar"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_centerInParent="true"-->
<!--                android:visibility="invisible"-->
<!--                android:indeterminate="true"-->
<!--                android:layout_gravity="center"-->
<!--                android:progressTint="@color/white"/>-->
        </LinearLayout>

    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>